[package]
name = "genesis-cli"
version = "0.1.0"
edition = "2021"
authors = ["Genesis Team"]
description = "Command-line interface for Genesis BOSH deployment tool"
license = "MIT"

[[bin]]
name = "genesis"
path = "src/main.rs"

[dependencies]
# Genesis crates
genesis-types = { path = "../genesis-types" }
genesis-core = { path = "../genesis-core" }
genesis-services = { path = "../genesis-services" }
genesis-kit = { path = "../genesis-kit" }
genesis-secrets = { path = "../genesis-secrets" }
genesis-manifest = { path = "../genesis-manifest" }
genesis-env = { path = "../genesis-env" }

# CLI framework
clap = { version = "4.4", features = ["derive", "cargo", "env"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Terminal UI
console = "0.15"
dialoguer = "0.11"
indicatif = "0.17"
colored = "2.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File system
walkdir = "2.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Process execution
subprocess = "0.2"

# Version info
built = { version = "0.7", features = ["git2"] }

[build-dependencies]
built = { version = "0.7", features = ["git2"] }

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
assert_cmd = "2.0"
predicates = "3.0"
