[package]
name = "genesis-env"
version = "0.1.0"
edition = "2021"
authors = ["Genesis Team"]
description = "Environment and deployment management for Genesis"
license = "MIT"

[dependencies]
# Genesis crates
genesis-types = { path = "../genesis-types" }
genesis-core = { path = "../genesis-core" }
genesis-services = { path = "../genesis-services" }
genesis-kit = { path = "../genesis-kit" }
genesis-secrets = { path = "../genesis-secrets" }
genesis-manifest = { path = "../genesis-manifest" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# File system and paths
walkdir = "2.4"
pathdiff = "0.2"

# Logging
tracing = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Hashing
sha2 = "0.10"
hex = "0.4"

# Git operations
git2 = "0.18"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
