[package]
name = "genesis-kit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Kit handling, hooks, and blueprint processing for Genesis"

[dependencies]
genesis-types = { workspace = true }
genesis-core = { workspace = true }
genesis-services = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
walkdir = { workspace = true }
tempfile = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
