[package]
name = "genesis-secrets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Secret generation, validation, and management for Genesis"

[dependencies]
genesis-types = { workspace = true }
genesis-core = { workspace = true }
genesis-services = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
openssl = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
rand = "0.8"
bcrypt = "0.15"
