[package]
name = "genesis-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core types, traits, and enums for Genesis BOSH deployment tool"
keywords.workspace = true
categories.workspace = true

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Async
async-trait = { workspace = true }

# Misc
once_cell = { workspace = true }
dirs = "5.0"

[dev-dependencies]
proptest = { workspace = true }
